--- a/modules/gateway/assertions/XacmlPdpAssertion/src/main/java/com/l7tech/external/assertions/xacmlpdp/console/resources/XacmlPdpPropertiesDialog.form
+++ b/modules/gateway/assertions/XacmlPdpAssertion/src/main/java/com/l7tech/external/assertions/xacmlpdp/console/resources/XacmlPdpPropertiesDialog.form
@@ -85,7 +85,7 @@
                   <text resource-bundle="com/l7tech/external/assertions/xacmlpdp/console/XacmlPdpPropertiesDialog" key="monitor.url.description"/>
                 </properties>
               </component>
-              <grid id="c434b" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+              <grid id="c434b" layout-manager="GridLayoutManager" row-count="2" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                 <margin top="0" left="0" bottom="0" right="0"/>
                 <constraints>
                   <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -109,6 +109,14 @@
                       </grid>
                     </constraints>
                     <properties/>
+                  </component>
+                  <component id="b05e7" class="javax.swing.JButton" binding="manageHttpOptionsButton">
+                    <constraints>
+                      <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="4" fill="0" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties>
+                      <text resource-bundle="com/l7tech/external/assertions/xacmlpdp/console/XacmlPdpPropertiesDialog" key="manageHttpOptionsButton.label"/>
+                    </properties>
                   </component>
                 </children>
               </grid>
