--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/WsdlLocationPanel.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/WsdlLocationPanel.form
@@ -42,7 +42,7 @@
         </constraints>
         <properties/>
       </component>
-      <grid id="6da6c" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="6da6c" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="20" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -71,6 +71,14 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <component id="13ce9" class="javax.swing.JButton" binding="manageHttpOptionsButton">
+            <constraints>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="HTTP Options"/>
+            </properties>
+          </component>
         </children>
       </grid>
       <component id="711b8" class="javax.swing.JLabel" binding="exampleUrlLabel">
