--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SchemaValidationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/SchemaValidationPropertiesDialog.form
@@ -234,7 +234,7 @@
                     <properties/>
                     <border type="none"/>
                     <children>
-                      <grid id="7d922" binding="specifyUrlTab" layout-manager="GridLayoutManager" row-count="5" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                      <grid id="7d922" binding="specifyUrlTab" layout-manager="GridLayoutManager" row-count="5" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                         <margin top="0" left="0" bottom="0" right="0"/>
                         <constraints>
                           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -270,7 +270,7 @@
                           </component>
                           <component id="a8d08" class="javax.swing.JTextField" binding="specifyUrlField">
                             <constraints>
-                              <grid row="2" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                              <grid row="2" column="2" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                 <preferred-size width="150" height="-1"/>
                               </grid>
                             </constraints>
@@ -278,7 +278,7 @@
                           </component>
                           <hspacer id="91054">
                             <constraints>
-                              <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                              <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="0" anchor="0" fill="1" indent="0" use-parent-layout="false">
                                 <minimum-size width="8" height="-1"/>
                                 <maximum-size width="8" height="-1"/>
                               </grid>
@@ -294,10 +294,18 @@
                           </vspacer>
                           <component id="1a4b1" class="javax.swing.JLabel">
                             <constraints>
-                              <grid row="1" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                              <grid row="1" column="1" row-span="1" col-span="3" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                             </constraints>
                             <properties>
                               <text resource-bundle="com/l7tech/console/resources/SchemaValidationPropertiesDialog" key="specifyUrlTextBox.description"/>
+                            </properties>
+                          </component>
+                          <component id="866f1" class="javax.swing.JButton" binding="manageHttpOptionsButton">
+                            <constraints>
+                              <grid row="3" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                            </constraints>
+                            <properties>
+                              <text resource-bundle="com/l7tech/console/resources/SchemaValidationPropertiesDialog" key="manageHttpOptionsButton.label"/>
                             </properties>
                           </component>
                         </children>
