--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/RemoteIpRangePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/RemoteIpRangePropertiesDialog.form
@@ -1,27 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="com.l7tech.console.panels.RemoteIpRangePropertiesDialog">
-  <grid id="2d7b7" binding="mainPanel" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="15">
+  <grid id="2d7b7" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="15">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="63" y="41" width="409" height="362"/>
-      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <grid id="4daad" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="4daad" layout-manager="GridLayoutManager" row-count="1" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <xy x="10" y="327" width="389" height="25"/>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1"/>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="2" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
           <component id="49a5c" class="javax.swing.JButton" binding="okButton">
             <constraints>
-              <xy x="178" y="0" width="53" height="25"/>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="OK"/>
@@ -29,8 +26,7 @@
           </component>
           <component id="6f182" class="javax.swing.JButton" binding="cancelButton">
             <constraints>
-              <xy x="241" y="0" width="75" height="25"/>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1"/>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Cancel"/>
@@ -38,8 +34,7 @@
           </component>
           <component id="185e7" class="javax.swing.JButton" binding="helpButton">
             <constraints>
-              <xy x="326" y="0" width="63" height="25"/>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1"/>
+              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="Help"/>
@@ -47,143 +42,74 @@
           </component>
           <hspacer id="ae29b">
             <constraints>
-              <xy x="0" y="7" width="178" height="11"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
         </children>
       </grid>
-      <grid id="b5ca8" row-count="1" column-count="9" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b5ca8" layout-manager="GridLayoutManager" row-count="1" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <xy x="10" y="83" width="389" height="21"/>
-          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="9" fill="1"/>
+          <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="3" anchor="9" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
         <children>
-          <component id="1c2c5" class="javax.swing.JFormattedTextField" binding="add1">
-            <constraints>
-              <xy x="0" y="0" width="40" height="21"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0">
-                <preferred-size width="40" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="888"/>
-            </properties>
-          </component>
-          <component id="af602" class="javax.swing.JFormattedTextField" binding="add2">
-            <constraints>
-              <xy x="88" y="0" width="40" height="21"/>
-              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0">
-                <preferred-size width="40" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="888"/>
-            </properties>
-          </component>
-          <component id="67bcc" class="javax.swing.JFormattedTextField" binding="add3">
-            <constraints>
-              <xy x="174" y="0" width="40" height="21"/>
-              <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0">
-                <preferred-size width="40" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="888"/>
-            </properties>
-          </component>
-          <component id="6749c" class="javax.swing.JFormattedTextField" binding="add4">
-            <constraints>
-              <xy x="260" y="0" width="40" height="21"/>
-              <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0">
-                <preferred-size width="40" height="-1"/>
-              </grid>
-            </constraints>
-            <properties>
-              <text value="888"/>
-            </properties>
-          </component>
           <component id="e9f44" class="javax.swing.JFormattedTextField" binding="suffix">
             <constraints>
-              <xy x="346" y="0" width="43" height="21"/>
-              <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1">
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="40" height="-1"/>
               </grid>
             </constraints>
             <properties>
               <text value="888"/>
-            </properties>
-          </component>
-          <component id="30fd5" class="javax.swing.JLabel">
-            <constraints>
-              <xy x="54" y="3" width="8" height="15"/>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
-            </constraints>
-            <properties>
-              <text value="."/>
-            </properties>
-          </component>
-          <component id="7af67" class="javax.swing.JLabel">
-            <constraints>
-              <xy x="141" y="3" width="8" height="15"/>
-              <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
-            </constraints>
-            <properties>
-              <text value="."/>
-            </properties>
-          </component>
-          <component id="fd6c8" class="javax.swing.JLabel">
-            <constraints>
-              <xy x="227" y="3" width="8" height="15"/>
-              <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
-            </constraints>
-            <properties>
-              <text value="."/>
             </properties>
           </component>
           <component id="6268" class="javax.swing.JLabel">
             <constraints>
-              <xy x="313" y="3" width="10" height="15"/>
-              <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="/"/>
+            </properties>
+          </component>
+          <component id="1c2c5" class="javax.swing.JFormattedTextField" binding="address">
+            <constraints>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties>
+              <text value="888"/>
             </properties>
           </component>
         </children>
       </grid>
       <component id="c2817" class="javax.swing.JComboBox" binding="includeExcludeCombo">
         <constraints>
-          <xy x="10" y="10" width="389" height="23"/>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1"/>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
       </component>
       <component id="3ce23" class="javax.swing.JLabel">
         <constraints>
-          <xy x="10" y="50" width="131" height="15"/>
-          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0"/>
+          <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <text value="the following IP range:"/>
         </properties>
       </component>
-      <grid id="b8529" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="b8529" layout-manager="GridLayoutManager" row-count="3" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
-          <xy x="10" y="119" width="389" height="193"/>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="etched" title="Requestor ip address source"/>
         <children>
           <component id="f7853" class="javax.swing.JRadioButton" binding="tcpRadio">
             <constraints>
-              <xy x="6" y="21" width="45" height="23"/>
-              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0"/>
+              <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="tcp"/>
@@ -191,8 +117,7 @@
           </component>
           <component id="f0b5b" class="javax.swing.JRadioButton" binding="contextVarRadio">
             <constraints>
-              <xy x="6" y="59" width="123" height="23"/>
-              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0"/>
+              <grid row="1" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
               <text value="context variable:"/>
@@ -200,8 +125,7 @@
           </component>
           <component id="8d78e" class="javax.swing.JTextField" binding="contextVarField">
             <constraints>
-              <xy x="139" y="60" width="244" height="21"/>
-              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1">
+              <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -209,8 +133,7 @@
           </component>
           <vspacer id="74384">
             <constraints>
-              <xy x="62" y="82" width="11" height="105"/>
-              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2"/>
+              <grid row="2" column="0" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
             </constraints>
           </vspacer>
         </children>
