--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ServicePropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/resources/ServicePropertiesDialog.form
@@ -330,11 +330,6 @@
                       <text value="&amp;Reset WSDL"/>
                     </properties>
                   </component>
-                  <hspacer id="b562a">
-                    <constraints>
-                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                    </constraints>
-                  </hspacer>
                   <component id="2141" class="javax.swing.JButton" binding="editWSDLButton" default-binding="true">
                     <constraints>
                       <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
@@ -343,6 +338,53 @@
                       <text value="&amp;Edit WSDL"/>
                     </properties>
                   </component>
+                  <grid id="980e3" layout-manager="GridLayoutManager" row-count="1" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                    <margin top="0" left="0" bottom="0" right="0"/>
+                    <constraints>
+                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                    </constraints>
+                    <properties/>
+                    <border type="none"/>
+                    <children>
+                      <component id="50e82" class="javax.swing.JLabel">
+                        <constraints>
+                          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="SOAP version:"/>
+                        </properties>
+                      </component>
+                      <hspacer id="5ed83">
+                        <constraints>
+                          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                      </hspacer>
+                      <component id="e2c42" class="javax.swing.JRadioButton" binding="soapVersionUnspecifiedButton">
+                        <constraints>
+                          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="&amp;Unspecified"/>
+                        </properties>
+                      </component>
+                      <component id="6eace" class="javax.swing.JRadioButton" binding="soapVersion11Button">
+                        <constraints>
+                          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="SOAP 1.&amp;1"/>
+                        </properties>
+                      </component>
+                      <component id="124e6" class="javax.swing.JRadioButton" binding="soapVersion12Button">
+                        <constraints>
+                          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+                        </constraints>
+                        <properties>
+                          <text value="SOAP 1.&amp;2"/>
+                        </properties>
+                      </component>
+                    </children>
+                  </grid>
                 </children>
               </grid>
               <component id="7a9bd" class="javax.swing.JCheckBox" binding="laxResolutionCheckbox">
@@ -641,6 +683,11 @@
     <group name="buttonGroup2">
       <member id="90826"/>
       <member id="c25fd"/>
+    </group>
+    <group name="soapVersionButtonGroup">
+      <member id="e2c42"/>
+      <member id="6eace"/>
+      <member id="124e6"/>
     </group>
   </buttonGroups>
   <inspectionSuppressions>
