--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/HttpConfigurationPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/HttpConfigurationPropertiesDialog.form
@@ -214,11 +214,7 @@
                         <preferred-size width="100" height="-1"/>
                       </grid>
                     </constraints>
-                    <properties>
-                      <model>
-                        <item value="&lt;Any&gt;"/>
-                      </model>
-                    </properties>
+                    <properties/>
                   </component>
                 </children>
               </grid>
@@ -339,11 +335,7 @@
                         <preferred-size width="100" height="-1"/>
                       </grid>
                     </constraints>
-                    <properties>
-                      <model>
-                        <item value="Any"/>
-                      </model>
-                    </properties>
+                    <properties/>
                   </component>
                   <component id="2ab43" class="javax.swing.JRadioButton" binding="useDefaultPrivateKeyRadioButton" default-binding="true">
                     <constraints>
